# agent-runner

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  agent-runner.command  alcove.command  design-bible.md  mind-map.md  pyproject.toml  task.md
docs/: alcove-roadmap-checkpoint.md  alcove-unified-studio-roadmap.md  alcove.rtf  community-feedback-posts.md  founder-mode.md  hosting-handoff.md  next-steps-handoff.md  packaged-smoke-test-checklist.md  step-2-simple-usability-layout.md  step-3-implement-sleek-minimal-skin.md  step-4-create-one-click-launch-experience.md  step-5-add-simple-usability-pass.md  step-6-smoke-test-and-handoff.md  step-7-verify-end-to-end-behavior.md  web-migration-plan.md
examples/: task.md
packaging/: agent-runner.spec
packaging/macos/: AlcoveMenuBar.swift  (+1 more)
scripts/: build-dev-mac-app.sh  build-packaged-mac-app.sh  founder-loop.sh  install-desktop-icon.sh  refresh-local-install.sh  setup-dev.sh
tests/: test_app_paths.py  test_artifacts.py  test_ascii_anim.py  test_check_detection.py  test_cli.py  test_codex_client.py  test_context_assembler.py  test_conversation_store.py  test_doctor.py  test_http_api.py  test_macos_wrapper.py  test_packaged_entry.py  test_page_context.py  test_prompt_context.py  test_providers.py  test_run_coordinator.py  test_runner.py  test_runner_conversation_context.py  test_server_info.py  test_service.py  test_settings_store.py  test_step7_end_to_end_checks.py  test_task_parser.py  test_ui_reload_behavior.py  test_ui_tab_bar_visibility.py  test_update_signal.py  test_web_ui.py
(+32 files in other folders)
