[project]
name = "secret-agent"
version = "0.1.0"
description = "Codex agent loop v0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
packaging = [
  "pyinstaller>=6.0.0",
]

[project.scripts]
agent-runner = "agent_runner.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
