[project]
name = "alcove"
version = "0.1.0"
description = "Browser-first workspace for steering Codex against local projects"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "qrcode>=7.4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
packaging = [
  "pyinstaller>=6.0.0",
]

[project.scripts]
alcove = "agent_runner.cli:main"
agent-runner = "agent_runner.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
